# audhd-agents

./: .dockerignore  .env.example  .gitignore  .pyre_configuration  AGENT.md  AUDIT_LOG.md  CAPABILITIES.md  COPILOT_SETUP.md  Dockerfile  KRASS.md  PROFILE.md  README.md  SKILL.md  SUGGESTIONS.md  SYSTEM_AUDIT_PROMPT.md  TOOL.md  audhd-agents-main.code-workspace  audit_report.json  build.py  check_output.txt  edit_commit_msg.py  edit_rebase_todo.py  output.txt  package-lock.json  package.json  prompt.md  pyproject.toml  pyrightconfig.json  reality_output.txt  requirements.txt  review_output.md  run_reality_check.py  sk  skill.yaml  test_output.txt
.claude/: settings.local.json
adapters/: __init__.py  anthropic_adapter.py  base.py  config.yaml  google_adapter.py  openai_adapter.py  router.py  schema.json  skill.yaml
agents/: README.md
capabilities/: analyze.yaml  audit.yaml  evaluate.yaml  generate.yaml  optimize.yaml  orchestrate.yaml  plan.yaml  research.yaml  synthesize.yaml  transform.yaml
cli/: __init__.py  __main__.py  llm_client.py  sk.py  skill_loader.py  validator.py
graphs/: README.md  capability_graph.yaml  routing_rules.yaml
models/: ANTHROPIC.md  CLAUDE.md  GEMINI.md  OPENAI.md
runtime/: __init__.py  app.py  auth.py  cognitive.py  config.py  hooks.py  hooks_scholar.py  init_hooks.py  middleware.py  monitoring.py  notion_client.py  pipeline_bridge.py  planner.py  sanitize.py  schemas.py  validation.py  webhook_schemas.py  webhooks.py
scripts/: check_connections.py  export_knowledge_base.py  ngrok_dev.sh  parallel_audit.py  prompt.md  schema.json  (+8 more)
(+316 files in other folders)
